--- a/index.html
+++ b/index.html
@@ -63,32 +63,32 @@
         <div class="program">
             <h3>Program 1 (Visiting Card)</h3>
             <div class="buttons">
-                <button onclick="copyFromFile('program1/xml.txt')">Copy XML</button>
-                <button onclick="copyFromFile('program1/java.txt')">Copy Java</button>
+                <button onclick="copyFromFile('xml.txt')">Copy XML</button>
+                <button onclick="copyFromFile('java.txt')">Copy Java</button>
             </div>
         </div>
 
         <div class="program">
             <h3>Program 2 (Simple calculator)</h3>
             <div class="buttons">
-                <button onclick="copyFromFile('program2/xml2.txt')">Copy XML</button>
-                <button onclick="copyFromFile('program2/java2.txt')">Copy Java</button>
+                <button onclick="copyFromFile('xml2.txt')">Copy XML</button>
+                <button onclick="copyFromFile('java2.txt')">Copy Java</button>
             </div>
         </div>
 
         <div class="program">
             <h3>Program 3(Counter Application)</h3>
             <div class="buttons">
-                <button onclick="copyFromFile('program3/xml3.txt')">Copy XML</button>
-                <button onclick="copyFromFile('program3/java3.txt')">Copy Java</button>
+                <button onclick="copyFromFile('xml3.txt')">Copy XML</button>
+                <button onclick="copyFromFile('java3.txt')">Copy Java</button>
             </div>
         </div>
 
         <div class="program">
             <h3>Program 4(Text-to-speech)</h3>
             <div class="buttons">
-                <button onclick="copyFromFile('program4/xml4.txt')">Copy XML</button>
-                <button onclick="copyFromFile('program4/java4.txt')">Copy Java</button>
+                <button onclick="copyFromFile('xml4.txt')">Copy XML</button>
+                <button onclick="copyFromFile('java4.txt')">Copy Java</button>
             </div>
         </div>
 
