--- a/index.html
+++ b/index.html
@@ -91,6 +91,27 @@
                 <button onclick="copyFromFile('java4.txt')">Copy Java</button>
             </div>
         </div>
+        <div class="program">
+            <h3>Program 5(Wallpaper Changing App)</h3>
+            <div class="buttons">
+                <button onclick="copyFromFile('xml5.txt')">Copy XML</button>
+                <button onclick="copyFromFile('java5.txt')">Copy Java</button>
+            </div>
+        </div>
+        <div class="program">
+            <h3>Program 6(phone dialler)</h3>
+            <div class="buttons">
+                <button onclick="copyFromFile('xml6.txt')">Copy XML</button>
+                <button onclick="copyFromFile('java6.txt')">Copy Java</button>
+            </div>
+        </div>
+        <div class="program">
+            <h3>Program 7(XML and JSON)</h3>
+            <div class="buttons">
+                <button onclick="copyFromFile('xml7.txt')">Copy XML</button>
+                <button onclick="copyFromFile('java7.txt')">Copy Java</button>
+            </div>
+        </div>
 
         <div id="message" class="message"></div>
     </div>
